# Sergeev_Egor_OOP

./: README.md
HW10/: Amphibious.h  Bird.h  CMakeLists.txt  GenericCreature.h  OceanCreature.h  TerrestrialCreature.h  Waterfowl.h  main.cpp
HW11_1/: CMakeLists.txt  Developer.h  House.h  main.cpp
HW11_2/: Alligator.h  Amphibious.h  Bird.h  CMakeLists.txt  Creator.h  Crocodile.h  GenericCreature.h  OceanCreature.h  Parrot.h  Pigeon.h  TerrestrialCreature.h  main.cpp
HW12_1/: Barn.h  CMakeLists.txt  ConcreteDevelopers.h  Developer.h  Fence.h  House.h  main.cpp
HW12_2/: Amphibious.h  Bird.h  CMakeLists.txt  Creator.h  GenericCreature.h  main.cpp
HW13/: BrickHouseBuilder.h  Builder.h  CMakeLists.txt  Director.h  House.h  HouseDocumentation.h  WoodHouseBuilder.h  main.cpp
HW14_1/: CMakeLists.txt  Car.h  Transmission.h  main.cpp
HW14_2/: CMakeLists.txt  Time.h  main.cpp
HW3/: CMakeLists.txt  main.cpp
HW4/: CMakeLists.txt  CMakeLists.txt.user.daa3c32  main.cpp
HW5/: CMakeLists.txt  Time.h  Time_test.cpp  main.cpp
HW6_1/: CMakeLists.txt  main.cpp
HW6_2/: CMakeLists.txt  main.cpp
HW7_1/: CMakeLists.txt  SimpleWatch.h  Time.h  Watch.h  main.cpp
HW7_2/: CMakeLists.txt  Clock.h  CuckooClock.h  SmartWatch.h  Time.cpp  WallClock.h  Watch.h  main.cpp
HW8/: Amphibious.h  Bird.h  CMakeLists.txt  GenericCreature.h  OceanCreature.h  TerrestrialCreature.h  Waterfowl.h  main.cpp
HW9_1/: Amphibious.h  Bird.h  CMakeLists.txt  OceanCreature.h  TerrestrialCreature.h  Waterfowl.h  main.cpp
HW9_2/: Amphibious.h  Bird.h  CMakeLists.txt  Flyer.h  GenericCreature.h  OceanCreature.h  Swimmer.h  TerrestrialCreature.h  Walker.h  Waterfowl.h  main.cpp
build-HW3-Desktop-Debug/: CMakeCache.txt  HW3  Makefile  cmake_install.cmake
build-HW3-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-29de069414ec1a611f77.json  cmakeFiles-v1-d233a03b6e338e64d013.json  codemodel-v2-f230768ff68b8d240d72.json  index-2024-11-03T11-51-12-0780.json  target-HW3-Debug-1b673242623e15060827.json
build-HW4-Desktop-Debug/: CMakeCache.txt  HW4  Makefile  cmake_install.cmake
build-HW4-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-15f6599499827c98d87d.json  cmakeFiles-v1-0c2bab5427aad20ee126.json  codemodel-v2-9127fdfbd0d7d4dfaf27.json  (+1 more)
build-HW5-Desktop-Debug/: CMakeCache.txt.prev  CTestTestfile.cmake  CircularBuffer_test[1]_include.cmake  Makefile  TimeApp  Time_test  Time_test[1]_include.cmake  Time_test[1]_tests.cmake  cmake_install.cmake
build-HW5-Desktop-Debug/Testing/Temporary/: CTestCostData.txt
build-task0a-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  task0a
build-task0b-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake  task0b
build-task1b-Desktop-Debug/: CMakeCache.txt.prev  CTestTestfile.cmake  CircularBuffer_test  CircularBuffer_test[1]_include.cmake  CircularBuffer_test[1]_tests.cmake  Makefile  cmake_install.cmake  task1b
build-task2_Life-Desktop-Debug/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
task0a/: CMakeLists.txt  main.cpp
task0b/: CMakeLists.txt  input.txt  main.cpp
task1b/: CMakeLists.txt  CMakeLists.txt.user.daa3c32  circular_buffer.cpp  circular_buffer.h  circular_buffer_test.cpp
task2_Life/: CMakeLists.txt  Game.cpp  Game.h  Rule.cpp  Rule.h  Universe.cpp  Universe.h  main.cpp
task2a/: CMakeLists.txt  Rule.cpp  Rule.h  Universe.cpp  Universe.h  block.txt  glider.txt  input.txt  main.cpp  pulsar.txt
(+71 files in other folders)
